# mask_recognition

./: .gitignore  README.md  dataloader.ipynb  pyproject.toml
.devcontainer/: devcontainer.json
preprocess/: args_preprocess.json  data_check.ipynb  data_cleaning.ipynb  preprocess.py  preprocessor.py  test.ipynb
results/runs/baseline/: args.yaml  results.csv
running/: app_capture.py  running_utils.py
scripts/: data_cleaning.ipynb  data_selection.ipynb  data_split.py  onnx.ipynb  train_baseline.py  train_selected_dataset.py  xml_parsing.ipynb
src/MaskRecog/preprocess/: args_preprocess.json  preprocess.py  preprocessor.py  test.ipynb
src/MaskRecog/utils/: utils.py
src/MaskRecognition.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
